--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ baseurl: /sajacafe
 
 # Site settings
 title: Saja Cafe
-email: your-email@domain.com
+email: lee.theodore@gmail.com
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 
 
