--- a/_config.yml
+++ b/_config.yml
@@ -9,19 +9,19 @@ description: "Write an awesome description for your new site here. You can edit 
 
 # Team names, titles and social links
 people:
-- name: Kay Garland
-  pic: 1
+- name: Teddy Lee
+  pic: teddy
   position: Lead Designer
   social:
-    - title: twitter
-      url: #
+    - title: instagram
+      url: https://www.instagram.com/teddyosaurusrex/
     - title: facebook
       url: #
-    - title: stack-overflow
-      url: #
+    - title: linkedin
+      url: https://www.linkedin.com/in/lee-theodore/
 
-- name: Larry Parker
-  pic: 2
+- name: James Lo
+  pic: james
   position: Lead Marketer
   social:
     - title: twitter
@@ -31,8 +31,8 @@ people:
     - title: linkedin
       url: #
 
-- name: Diana Petersen
-  pic: 3
+- name: Daniel Yoon
+  pic: daniel
   position: Lead Developer
   social:
     - title: twitter
