--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ people:
 
 - name: James Lo
   pic: james
-  position: Mystery Saja
+  position: Jinu Saja
   social:
     - title: instagram
       url: https://www.instagram.com/lo__jam/
