--- a/_config.yml
+++ b/_config.yml
@@ -53,12 +53,12 @@ social:
   - title: bitbucket 
     url: http://bitbucket.org/jekyll
   - title: github
-    url: http://github.com/jekyll
+    url: https://github.com/lee-theod/sajacafe
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: 3481 Melrose Place
-  - line: Beverly Hills, CA 90210
+  - line: 2007 Hickory Street
+  - line: Houston, TX 77007
 
 # Build settings
 markdown: kramdown
